--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -62,7 +62,7 @@
 			
 			// TODO 2 - Variable declarations 
 			
-
+			var positionX = 0;
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -70,8 +70,9 @@
 			turn it around! 
 			*/
 			function update() {
+				positionX = positionX + 10;
+				moveBoxTo(postionX);
 				
-
 			};
 
 			/* 
@@ -80,7 +81,7 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
+				positionX = 0;
 
 
 			};
