--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -63,6 +63,7 @@
 			// TODO 2 - Variable declarations 
 			
 			var positionX = 0;
+			var points = 0;
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -71,7 +72,7 @@
 			*/
 			function update() {
 				positionX = positionX + 10;
-				moveBoxTo(postionX);
+				moveBoxTo(positionX);
 				
 			};
 
@@ -82,7 +83,8 @@
 			*/
 			function handleBoxClick() {
 				positionX = 0;
-
+				points = points + 1;
+				changeBoxText(points);
 
 			};
 		})();
