--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -64,6 +64,7 @@
 			
 			var positionX = 0;
 			var points = 0;
+			var speed = 10;
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -71,7 +72,7 @@
 			turn it around! 
 			*/
 			function update() {
-				positionX = positionX + 10;
+				positionX = positionX + speed;
 				moveBoxTo(positionX);
 				
 			};
@@ -84,6 +85,7 @@
 			function handleBoxClick() {
 				positionX = 0;
 				points = points + 1;
+				speed = speed + 3;
 				changeBoxText(points);
 
 			};
