--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -47,8 +47,9 @@
 			box.on('click', handleBoxClick);
 
 			// moves the Box to a new position on the screen along the X-Axis
-			function moveBoxTo(newPositionX) {
+			function moveBoxTo(newPositionX, newPositionY) {
 				box.css("left", newPositionX);
+				box.css("top", newPositionY);
 			}
 
 			// changes the text displayed on the Box
@@ -65,6 +66,9 @@
 			var positionX = 0;
 			var points = 0;
 			var speed = 10;
+			var positionY;
+			var speedY;
+			var boardHeight = jQuery(window).height();
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -74,8 +78,13 @@
 			function update() {
 				positionX = positionX + speed;
 				moveBoxTo(positionX);
-				
-				
+				if(positionX > boardWidth) {
+					speed = -speed;
+				}
+				if(positionX < 0) {
+					speed = -speed;
+				}
+				moveBoxTo(positionX, positionY);
 			};
 
 			/* 
@@ -86,8 +95,13 @@
 			function handleBoxClick() {
 				positionX = 0;
 				points = points + 1;
-				speed = speed + 3;
 				changeBoxText(points);
+				if (speed >= 0) {
+					speed += 3;
+				}
+				else if(speed < 0) {
+					speed -= 3;
+				}
 
 			};
 		})();
