--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -8,7 +8,7 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: rgb(121, 248, 121);
 			font-size: 300%;
 			text-align: center;
 			display: block;
@@ -85,6 +85,7 @@
 					speed = -speed;
 				}
 				moveBoxTo(positionX, positionY);
+				
 			};
 
 			/* 
