--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -70,6 +70,7 @@
 			var positionY = 0;
 			var speedY = 10;
 			var boardHeight = jQuery(window).height();
+			var randNum = Math.random() * 100;
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
